--- a/app/client/main/hello-world.html
+++ b/app/client/main/hello-world.html
@@ -1,5 +1,4 @@
 <div>
-	<h1>{{vm.greeting}}</h1>
 	<div class="panel panel-danger">
 		<div class="panel-body">
 	    	Panel content
@@ -9,6 +8,6 @@
 	<div class="alert alert-danger" role="alert">
 		<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 		<span class="sr-only">Error:</span>
-		Enter a valid email address
+		{{vm.greeting}}
 	</div>
 </div>
