--- a/app/client/main/hello-world.html
+++ b/app/client/main/hello-world.html
@@ -1,6 +1,6 @@
 <div class="alert alert-danger" role="alert">
 	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 	<span class="sr-only">Error:</span>
-	{{vm.greeting}}
+	{{helloWorldCtrl.greeting}}
 	<h3>OK</h3>
 </div>
