added layout test

--- a/app/client/pages/index.html
+++ b/app/client/pages/index.html
@@ -1,1 +1,32 @@
 <hello-world></hello-world>
+<div class="panel panel-default">
+	<!-- Default panel contents -->
+	<div class="panel-heading">Development board</div>
+	<div class="panel-body">
+		<p>
+			Tasks in current sprint
+		</p>
+	</div>
+	<!-- Table -->
+	<table class="table">
+		<tr>
+		    <th>Name</th>
+		    <th>Date</th>
+		    <th>Points</th>
+		    <th>Description</th>
+	   	</tr>
+	   	<tr>
+	   		<td>Alex</td>
+	   		<td>20 November</td>
+	   		<td>3</td>
+	   		<td>To do angular agile board</td>
+	   	</tr>
+   		<tr>
+   			<td>Sergey</td>
+   			<td>25 November</td>
+   			<td>10</td>
+   			<td>To mentor project</td>
+   		</tr>
+	</table>
+</div>
+<a href="#/about">About</a>
