--- a/app/client/pages/about.html
+++ b/app/client/pages/about.html
@@ -1,3 +1,1 @@
-<div class="page-header">
-  <h1>Agile board <small>simple version</small></h1>
-</div>
+<h1>This is about page. This product for agile</h1>
