--- a/app/client/pages/index.html
+++ b/app/client/pages/index.html
@@ -1,3 +1,18 @@
 <hello-world></hello-world>
-<div ui-view></div>
 <a href="/about">About</a>
+
+
+
+<div class="wrapper">
+	<header  class="header">
+        <h3>
+            Agile board
+        </h3>
+    </header>
+	<div ui-view></div>
+    <footer class="footer">
+        <p>
+            @Copyright Yankouski Aliaksandr, 2015
+        </p>
+    </footer>
+</div>
