fix some layout features

--- a/app/client/pages/index.html
+++ b/app/client/pages/index.html
@@ -1,13 +1,3 @@
-<div class="wrapper">
-	<header  class="header">
-        <h3>
-            Agile board
-        </h3>
-    </header>
-	<div ui-view></div>
-    <footer class="footer">
-        <p>
-            @Copyright Yankouski Aliaksandr, 2015
-        </p>
-    </footer>
-</div>
+<board-header></board-header>
+<div ui-view></div>
+<board-footer></board-footer>
