added logic for stories

--- a/app/client/pages/about.html
+++ b/app/client/pages/about.html
@@ -1,24 +1,39 @@
 <board-header></board-header>
 
-<span class="label label-success">Writing directives</span><br/>
+<span class="label label-success">Writing socket connection</span><br/>
 <div class="progress progress-striped active">
-    <div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-        <span class="sr-only">30% Complete</span>
+    <div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+        <span class="sr-only">80% Complete</span>
     </div>
 </div>
 
 <span class="label label-warning">Writing server</span><br/>
 <div class="progress progress-striped active">
-    <div class="progress-bar  progress-bar-warning"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-        <span class="sr-only">45% Complete</span>
+    <div class="progress-bar  progress-bar-warning"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+        <span class="sr-only">70% Complete</span>
     </div>
 </div>
 
 <span class="label label-danger">Writing layout</span><br/>
 <div class="progress progress-striped active">
-    <div class="progress-bar  progress-bar-danger"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-        <span class="sr-only">50% Complete</span>
+    <div class="progress-bar  progress-bar-danger"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 73%">
+        <span class="sr-only">73% Complete</span>
     </div>
 </div>
+
+<span class="label label-primary">Writing business logic</span><br/>
+<div class="progress progress-striped active">
+    <div class="progress-bar  progress-bar-primary"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 88%">
+        <span class="sr-only">88% Complete</span>
+    </div>
+</div>
+
+<span class="label label-info">Writing authentification</span><br/>
+<div class="progress progress-striped active">
+    <div class="progress-bar  progress-bar-info"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 7%">
+        <span class="sr-only">7% Complete</span>
+    </div>
+</div>
+
 
 <board-footer></board-footer>
