--- a/app/client/pages/auth.html
+++ b/app/client/pages/auth.html
@@ -1,14 +1,20 @@
 <board-header></board-header>
 <div class="container">
-  <form class="form-signin" role="form">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <input type="email" class="form-control" placeholder="Email address" required="" autofocus="">
-    <input type="password" class="form-control" placeholder="Password" required="">
-    <label class="checkbox">
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
+	<form class="form-signin" role="form">
+		<h2 class="form-signin-heading">Please sign in</h2>
+
+		<span class="label label-info">Type email</span><br/>
+		<input type="email" class="form-control" placeholder="Email address" required="" autofocus=""><br/>
+
+		<span class="label label-info">Type password</span><br/>
+		<input type="password" class="form-control" placeholder="Password" required=""><br/>
+		
+
+		<label class="checkbox">
+			<input type="checkbox" value="remember-me"> Remember me
+		</label>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	</form>
 
 </div>
 <board-footer></board-footer>
