--- a/app/client/pages/reg.html
+++ b/app/client/pages/reg.html
@@ -1,18 +1,30 @@
 <board-header></board-header>
-<div class="container">
-	<form class="form-signin" role="form">
+<div class="container" ng-controller="AuthCtrl">
+	<form ng-show="!isReg" class="form-signin" role="form">
 		<h2 class="form-signin-heading">Type info about you for registration</h2>
 
-		<span class="label label-info">Type email</span><br/>
-		<input type="email" class="form-control" placeholder="Email address" required="" autofocus=""><br/>
+		<span class="label label-info">Type login</span><br/>
+		<input type="login" ng-model="user.login" class="form-control" placeholder="Login" required="" autofocus=""><br/>
 
 		<span class="label label-info">Type password</span><br/>
-		<input type="password" class="form-control" placeholder="Password" required="true"><br/>
+		<input type="password" ng-model="user.password" class="form-control" placeholder="Password" required="true"><br/>
 
 		<span class="label label-info">Repeat password</span><br/>
-		<input type="password" class="form-control" placeholder="Repeat password" required="true"><br/>
+		<input type="password" ng-model="user.passwordRepeat" class="form-control" placeholder="Repeat password" required="true"><br/>
 
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Registration</button><br/>
+		<button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="reg()">Registration</button><br/>
 	</form>
+
+	<div ng-show="isReg" class="alert alert-info" role="alert">
+		<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		<span class="sr-only">Error:</span>
+		User is registrated
+	</div>
+		
+	<div ng-show="incorrect" class="alert alert-danger" role="alert">
+		<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		<span class="sr-only">Error:</span>
+		Enter valid data! Email is incorrect or passwords are not same
+	</div>
 </div>
 <board-footer></board-footer>
